--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -71,6 +71,7 @@
             <div class="col">Email</div>
             <div class="col">CPF</div>
             <div class="col">Gênero</div>
+            <div class="col">Transações</div>
             <div class="col">Ações</div>
         </div>
         <div id="resultadoPesquisa">
