Criado botão para transações

--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -48,6 +48,7 @@
         .container-consulta {
             text-align: right;
         }
+
     </style>
 
     <div class="container mt-4">
@@ -60,7 +61,7 @@
 
     <div class="container-consulta">
         <input type="text" id="termoPesquisa" placeholder="Digite aqui...">
-        <button id="consultarClientes">Consultar</button>
+        <button class="btn btn-primary mb-3" id="consultarClientes">Consultar</button>
     </div>
     <!--<<button  class="btn-azul btn-azul-pagamento" id="meuBotaocliente">Adicionar cliente</button>-->
     <div id="clientGrid" class="container mt-4">
