Implementando status do cliente

--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -116,6 +116,10 @@
                 <label for="cpfCliente" class="label-blue">CPF</label>
                 <input type="text" id="cpfCliente" class="form-control input-card">
 
+                <label for="statusCliente" class="label-blue">Status</label>
+                <input type="checkbox" id="statusCliente">
+
+
                 <h4>Cartões de Crédito</h4>
                 <div id="cartoes-container"></div>
                 <button class="btn btn-secondary" id="botaoModalCartao">Gerenciar Cartões</button>
