Implementado status do cliente e parta ser inativado

--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -72,6 +72,7 @@
             <div class="col">Email</div>
             <div class="col">CPF</div>
             <div class="col">Gênero</div>
+            <div class="col">Status</div>
             <div class="col">Transações</div>
             <div class="col">Ações</div>
         </div>
