--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -88,13 +88,16 @@
 
             <form>
                 <div class="mb-3 d-flex justify-content-between">
-                    <div>
-                        <label for="nomeCliente" class="label-blue">Nome do Cliente</label>
-                        <input type="text" id="nomeCliente" class="form-control input-card">
+                    <div class="col-md-6">
+                        <label for="nomeCliente" class="label-blue">Nome do Cliente:</label>
+                        <input type="text" id="nomeCliente" class="form-control input-card" placeholder="Digite o seu nome completo">
                     </div>
-                    <div>
-                        <label for="genero" class="label-blue">Genero</label>
-                        <input type="text" id="genero" class="form-control input-card">
+                    <div class="col-md-6">
+                        <label for="genero" class="label-blue">Gênero:</label>
+                        <select id="genero" class="form-select input-card" placeholder="Selecione o Gênero">
+                            <option value="1">Masculino</option>
+                            <option value="2">Feminino</option>
+                        </select>
                     </div>
                 </div>
 
@@ -102,35 +105,114 @@
 
                 <div class="mb-3 d-flex justify-content-between">
                     <div>
-                        <label for="dataNascimento" class="label-blue">Data de Nascimento</label>
-                        <input type="date" id="dataNascimento" class="form-control input-card">
+                        <label for="telefone" class="label-blue">Telefone/Celular:</label>
+                        <input type="text" id="telefone" class="form-control input-card" placeholder="Digite seu telefone/celular">
                     </div>
-                    <div>
-                        <label for="telefone" class="label-blue">Telefone/Celular</label>
-                        <input type="text" id="telefone" class="form-control input-card">
+                    <div class="col-md-6">
+                        <label for="tipoTelefone" class="label-blue">Tipo do Telefone:</label>
+                        <select id="tipoTelefone" class="form-select input-card" placeholder="Selecione o Tipo">
+                            <option value="1">Comercial</option>
+                            <option value="2">Residencial</option>
+                        </select>
                     </div>
                 </div>
 
+                <div>
+                    <label for="dataNascimento" class="label-blue">Data de Nascimento</label>
+                    <input type="date" id="dataNascimento" class="form-control input-card" >
+                </div>
+
                 <label for="emailCliente" class="label-blue">Email do Cliente</label>
-                <input type="email" id="emailCliente" class="form-control input-card">
+                <input type="email" id="emailCliente" class="form-control input-card" placeholder="Digite o email do cliente">
 
                 <label for="cpfCliente" class="label-blue">CPF</label>
-                <input type="text" id="cpfCliente" class="form-control input-card">
+                <input type="text" id="cpfCliente" class="form-control input-card" placeholder="CPF">
 
-                <label for="statusCliente" class="label-blue">Status</label>
+                <br>
+                <label for="statusCliente" class="label-blue">Status do Cliente</label>
                 <input type="checkbox" id="statusCliente">
+                <br>
+                <br>
 
+                <h3 class="popup-title">Cartão de Crédito</h3>
 
-                <h4>Cartões de Crédito</h4>
                 <div id="cartoes-container"></div>
-                <button class="btn btn-secondary" id="botaoModalCartao">Gerenciar Cartões</button>
+                <div class="mb-3">
+                    <label for="numero" class="label-blue">Número do Cartão:</label>
+                    <input type="text" class="form-control input-card" id="numeroCartao" placeholder="____.____.____.____">
+                </div>
+
+                <div class="mb-3 d-flex justify-content-between">
+                    <div>
+                        <label for="validade" class="label-blue">Validade:</label>
+                        <input type="text" class="form-control input-card" id="validade" placeholder="MM/AA">
+                    </div>
+                    <div>
+                        <label for="cvv" class="label-blue">CVV:</label>
+                        <input type="text" class="form-control input-card" id="cvv" placeholder="CVV">
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="titular" class="label-blue">Titular do Cartão:</label>
+                    <input type="text" class="form-control input-card" id="titular" placeholder="Nome Completo do Titular">
+                </div>
+
+                <div class="mb-3">
+                    <label for="cpf" class="label-blue">CPF do Titular:</label>
+                    <input type="text" class="form-control input-card" id="cpf" placeholder="___.___.___-__">
+                </div>
+
+                <br>
+
+                <h3 class="popup-title">Endereço</h3>
+
+                <div class="mb-3">
+                    <label for="ruaCliente" class="label-blue">Rua:</label>
+                    <input type="text" id="ruaCliente" class="form-control input-card" placeholder="Digite sua rua">
+                </div>
+
+                <div class="mb-3">
+                    <label for="cidadeCliente" class="label-blue">Cidade:</label>
+                    <input type="text" id="cidadeCliente" class="form-control input-card" placeholder="Digite sua cidade">
+                </div>
+
+                <div class="mb-3">
+                    <label for="bairroCliente" class="label-blue">Bairro:</label>
+                    <input type="text" id="bairroCliente" class="form-control input-card" placeholder="Digite seu bairro">
+                </div>
+
+                <div class="mb-3 d-flex justify-content-between">
+                    <div>
+                        <label for="numeroEndereco" class="label-blue">Número:</label>
+                        <input type="text" id="numeroEndereco" class="form-control input-card" placeholder="Digite seu número">
+                    </div>
+                    <div>
+                        <label for="cep" class="label-blue">CEP:</label>
+                        <input type="text" id="cep" class="form-control input-card" placeholder="Digite seu CEP">
+                    </div>
+                </div>
+
+                <div class="mb-3 d-flex justify-content-between">
+                    <div>
+                        <label for="estadoCliente" class="label-blue">Estado:</label>
+                        <input type="text" id="estadoCliente" class="form-control input-card" placeholder="Digite seu estado">
+                    </div>
+                    <div>
+                        <label for="paisCliente" class="label-blue">País:</label>
+                        <input type="text" id="paisCliente" class="form-control input-card" placeholder="Digite seu país">
+                    </div>
+                </div>
+
+                @*<button class="btn btn-secondary" id="botaoModalCartao">Gerenciar Cartões</button>*@
             </form>
+
 
             <button id="confirmar-cliente" class="btn btn-primary">Confirmar</button>
         </div>
     </div>
 
-    <div class="overlay-cartao" id="overlay-cartao">
+    @*<div class="overlay-cartao" id="overlay-cartao">
         <div class="popup-cartao" id="popup-cartao">
             <div class="container mt-4">
                 <button id="fechar-cartao" class="close-button"><i class="fas fa-times"></i></button>
@@ -180,7 +262,7 @@
             </div>
 
         </div>
-    </div>
+    </div>*@
 
     <!-- <div class="overlay" id="overlay-cliente">
         <div id="novoClienteModal" class="popup">
