Modificações nos testes automatizados

--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -63,7 +63,7 @@
         <input type="text" id="termoPesquisa" placeholder="Digite aqui...">
         <button class="btn btn-primary mb-3" id="consultarClientes">Consultar</button>
     </div>
-    <!--<<button  class="btn-azul btn-azul-pagamento" id="meuBotaocliente">Adicionar cliente</button>-->
+
     <div id="clientGrid" class="container mt-4">
         <h1 class="text-center">Lista de Clientes</h1>
         <div class="row grid-header">
@@ -77,7 +77,7 @@
             <div class="col">Ações</div>
         </div>
         <div id="resultadoPesquisa">
-            <!-- Os resultados da pesquisa serão preenchidos aqui pelo JavaScript. -->
+            <!-- resultado da consulta entrará aqui -->
         </div>
     </div>
 
