--- a/EcommerceBack/wwwroot/css/site.css
+++ b/EcommerceBack/wwwroot/css/site.css
@@ -744,6 +744,29 @@ h1, h2 {
     overflow-y: auto;
 }
 
+.overlay-endereco {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+}
+
+.popup-endereco {
+    display: none;
+    background-color: white;
+    border-radius: 8px;
+    padding: 44px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-height: 95%;
+    overflow-y: auto;
+}
+
 .overlay-cliente {
     display: none;
     position: fixed;
