--- a/EcommerceBack/Views/PaginaInicial/PaginaInicial.cshtml
+++ b/EcommerceBack/Views/PaginaInicial/PaginaInicial.cshtml
@@ -49,33 +49,36 @@
     <div class="container-card-image">
         @foreach (var calcados in Model.Take(4))
         {
-            <div class="container-item">
-                <input type="hidden" id="@calcados.cal_id">
-                <img class="image-index" src="~/imagens/png-transparent-air-force-1-sneakers-basketball-shoe-nike-air-force-one-white-leather-logo-thumbnail-removebg-preview" alt="">
-                <p class="p-index">@calcados.cal_marca @calcados.cal_modelo</p>
-                <p class="p-index">@calcados.cal_titulo</p>
-                <p class="p-index">R$ @calcados.cal_valor.ToString("0.00")</p>
-                <p class="p-index">10x de R$ @(calcados.cal_valor / 10).ToString("0.00")</p>
-            </div>
+            <a asp-controller="Produto" asp-action="Produto">
+                <div class="container-item">
+                    <input type="hidden" id="@calcados.cal_id">
+                    <img class="image-index" src="~/imagens/airforce1.png" alt="">
+                    <p class="p-index">@calcados.cal_marca @calcados.cal_modelo</p>
+                    <p class="p-index">@calcados.cal_cat_id</p>
+                    <p class="p-index">@calcados.cal_valor</p>
+                    <p class="p-index">10x de R$ @calcados.cal_valor</p>
+                </div>
+            </a>
         }
     </div>
 
     <div class="container-card-image">
         @foreach (var calcados in Model.Skip(4).Take(4)) 
         {
-            <div class="container-item">
+            <a asp-controller="Produto" asp-action="Produto">
+                <div class="container-item">
                 <input type="hidden" id="@calcados.cal_id">
-                <img class="image-index" src="~/imagens/png-transparent-air-force-1-sneakers-basketball-shoe-nike-air-force-one-white-leather-logo-thumbnail-removebg-preview" alt="">
+                <img class="image-index" src="~/imagens/airforce1.png" alt="">
                 <p class="p-index">@calcados.cal_marca @calcados.cal_modelo</p>
-                <p class="p-index">@calcados.cal_titulo</p>
-                <p class="p-index">R$ @calcados.cal_valor.ToString("0.00")</p>
-                <p class="p-index">10x de R$ @(calcados.cal_valor / 10).ToString("0.00")</p>
-            </div>
+                <p class="p-index">@calcados.cal_cat_id</p>
+                <p class="p-index">@calcados.cal_valor</p>
+                <p class="p-index">10x de R$ @calcados.cal_valor</p>
+                </div>
+            </a>
         }
     </div>
 
     <link rel="stylesheet" href="~/css/style.css">
-
-    <script src="~/js/script.js"></script>
+    <script href="~/js/script.js"></script>
 
 </body>
