--- a/EcommerceBack/Views/Produto/Produto.cshtml
+++ b/EcommerceBack/Views/Produto/Produto.cshtml
@@ -1,19 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce</title>
-    <link rel="stylesheet" href="estilos/style.css">
+@{
+    ViewData["Title"] = "Produto";
+}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
-          integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-</head>
 <body onload="carregarValorCarrinho()">
   <nav class="navbar navbar-expand-lg navbar-light custom-navbar justify-content-between">
     <div class="container">
@@ -47,16 +36,16 @@
 
     <div class="container-externo">
       <div class="container-mini-product">
-        <img class="mini-product-image" width="65px" height="48px" src="estilos/imagens/air_force_azul_1.png" alt="">
-        <img class="mini-product-image" width="65px" height="48px" src="estilos/imagens/air_force_azul_2.png" alt="">
-        <img class="mini-product-image" width= "65px" height= "48px" src="estilos/imagens/air_force_azul_3.png" alt="">
-        <img class="mini-product-image" width= "65px" height= "48px" src="estilos/imagens/air_force_azul_4.png" alt="">
-        <img class="mini-product-image" width= "65px" height= "48px" src="estilos/imagens/air_force_azul_5.png" alt="">
+            <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
+            <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
+            <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
+            <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
+            <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
       </div>
       
       <div class="container-product">
         <div class="main-product-image">
-          <img width="400px" height="248px" src="estilos/imagens/air_force_azul_1.png" alt="">
+                <img width="400px" height="248px" src="~/imagens/airforce1.png" alt="">
         </div>
         <div class="circles-container">
           <svg xmlns="http://www.w3.org/2000/svg" width="43" height="7" viewBox="0 0 43 7" fill="none">
@@ -143,7 +132,8 @@
           <button  class="btn-branco" onclick="addItemCart(this)" id="btn-add-carrinho">Adicionar ao carrinho</button>          </div>
       </div>
     </div>
-    <script src="../controller/script.js"></script>
+
+    <link rel="stylesheet" href="~/css/style.css">
+    <script href="~/js/script.js"></script>
 
 </body>
-</html>
