--- a/EcommerceBack/Views/Shared/_Layout.cshtml
+++ b/EcommerceBack/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PaginaInicial" asp-action="PaginaInicial">PaginaInicial</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="Produto">Produto</a>
+                        </li>
                     </ul>
                 </div>
             </div>
