--- a/EcommerceBack/Views/PaginaInicial/PaginaInicial.cshtml
+++ b/EcommerceBack/Views/PaginaInicial/PaginaInicial.cshtml
@@ -49,7 +49,7 @@
     <div class="container-card-image">
         @foreach (var calcados in Model.Take(4))
         {
-            <a asp-controller="Produto" asp-action="Produto">
+            <a asp-controller="Produto" asp-action="Produto" asp-route-cal_id="@calcados.cal_id" style="text-decoration: None">
                 <div class="container-item">
                     <input type="hidden" id="@calcados.cal_id">
                     <img class="image-index" src="~/imagens/airforce1.png" alt="">
@@ -65,7 +65,7 @@
     <div class="container-card-image">
         @foreach (var calcados in Model.Skip(4).Take(4)) 
         {
-            <a asp-controller="Produto" asp-action="Produto">
+            <a asp-controller="Produto" asp-action="Produto" asp-route-cal_id="@calcados.cal_id" style="text-decoration: None">
                 <div class="container-item">
                 <input type="hidden" id="@calcados.cal_id">
                 <img class="image-index" src="~/imagens/airforce1.png" alt="">
@@ -77,6 +77,7 @@
             </a>
         }
     </div>
+
 
     <link rel="stylesheet" href="~/css/style.css">
     <script href="~/js/script.js"></script>
