--- a/EcommerceBack/Views/Produto/Produto.cshtml
+++ b/EcommerceBack/Views/Produto/Produto.cshtml
@@ -1,136 +1,145 @@
+﻿@model List<Calcados>
+
 @{
     ViewData["Title"] = "Produto";
 }
 
 
 <body onload="carregarValorCarrinho()">
-  <nav class="navbar navbar-expand-lg navbar-light custom-navbar justify-content-between">
-    <div class="container">
-      <ul class="navbar-nav">
-        <li class="nav-item nav-item-cart">
-          <a class="nav-link custom-link" style="color: white;" href="index.html" ><i class="fas fa-home"></i> Tela inicial</a>
-        </li>
-        <li class="nav-item nav-item-cart">
-          <a class="nav-link custom-link" style="color: white;" href="carrinho_compras.html" ><i class="fas fa-shopping-cart"></i> Carrinho</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <input type="text" class="form-control search-input" placeholder="Pesquisar produtos...">
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="navbar-nav navbar-nav-right">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" style="color: white;" href="pedidos_status_cliente.html"><i class="fas fa-file-alt"></i> Pedidos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" style="color: white;" href="#"> Login <i class="fas fa-user"></i></a>
-        </li>
-      </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-light custom-navbar justify-content-between">
+        <div class="container">
+            <ul class="navbar-nav">
+                <li class="nav-item nav-item-cart">
+                    <a class="nav-link custom-link" style="color: white;" href="index.html"><i class="fas fa-home"></i> Tela inicial</a>
+                </li>
+                <li class="nav-item nav-item-cart">
+                    <a class="nav-link custom-link" style="color: white;" href="carrinho_compras.html"><i class="fas fa-shopping-cart"></i> Carrinho</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <input type="text" class="form-control search-input" placeholder="Pesquisar produtos...">
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="navbar-nav navbar-nav-right">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" style="color: white;" href="pedidos_status_cliente.html"><i class="fas fa-file-alt"></i> Pedidos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: white;" href="#"> Login <i class="fas fa-user"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-    <h1 class="tit-produto">Tênis Nike Air Force 1 - Masculino</h1>
+    <h1 class="tit-produto">@Model[0].cal_titulo</h1>
 
     <div class="container-externo">
-      <div class="container-mini-product">
+        <div class="container-mini-product">
             <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
             <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
             <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
             <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
             <img class="mini-product-image" width="65px" height="48px" src="~/imagens/airforce1.png" alt="">
-      </div>
-      
-      <div class="container-product">
-        <div class="main-product-image">
-                <img width="400px" height="248px" src="~/imagens/airforce1.png" alt="">
         </div>
-        <div class="circles-container">
-          <svg xmlns="http://www.w3.org/2000/svg" width="43" height="7" viewBox="0 0 43 7" fill="none">
-            <circle class="circle" cx="3.07143" cy="3.07143" r="3.07143" fill="#15368A"/>
-            <circle class="circle" cx="12.2858" cy="3.07143" r="3.07143" fill="#E6E6E6"/>
-            <circle class="circle" cx="21.4999" cy="3.07143" r="3.07143" fill="#E6E6E6"/>
-            <circle class="circle" cx="30.7143" cy="3.07143" r="3.07143" fill="#E6E6E6"/>
-            <circle class="circle" cx="39.9284" cy="3.07143" r="3.07143" fill="#E6E6E6"/>
-          </svg>
+
+        <div class="container-product">
+            <div class="main-product-image">
+                <img width="400px" height="248px" src="~/imagens/@(Model[0].cal_marca.Replace(" ", "").ToLower())@(Model[0].cal_modelo.Replace(" ", "").ToLower())-1.png" alt="">
+            </div>
+            <div class="circles-container">
+                <svg xmlns="http://www.w3.org/2000/svg" width="43" height="7" viewBox="0 0 43 7" fill="none">
+                    <circle class="circle" cx="3.07143" cy="3.07143" r="3.07143" fill="#15368A" />
+                    <circle class="circle" cx="12.2858" cy="3.07143" r="3.07143" fill="#E6E6E6" />
+                    <circle class="circle" cx="21.4999" cy="3.07143" r="3.07143" fill="#E6E6E6" />
+                    <circle class="circle" cx="30.7143" cy="3.07143" r="3.07143" fill="#E6E6E6" />
+                    <circle class="circle" cx="39.9284" cy="3.07143" r="3.07143" fill="#E6E6E6" />
+                </svg>
+            </div>
         </div>
-      </div>
-      
-      <div class="info-product">
-          <div class="colors">
-            <!-- Primeiro SVG -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 17 17" fill="none">
-              <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1279)" onclick="alternarSelecao(this)"/>
-              <defs>
-                <linearGradient id="paint0_linear_8_1279" x1="5" y1="1.5" x2="13" y2="14.5" gradientUnits="userSpaceOnUse">
-                  <stop stop-color="#15368A"/>
-                  <stop offset="1" stop-color="#D1DEFF"/>
-                </linearGradient>
-              </defs>
-            </svg>
 
-            <!-- Segundo SVG -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 17 17" fill="none">
-              <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1282)" onclick="alternarSelecao(this)"/>
-              <defs>
-                <linearGradient id="paint0_linear_8_1282" x1="4" y1="1" x2="13.5" y2="15" gradientUnits="userSpaceOnUse">
-                  <stop stop-color="#2E2E2E"/>
-                  <stop offset="1" stop-color="#A9A9A9"/>
-                </linearGradient>
-              </defs>
-            </svg>
+        <div class="info-product">
+            <div class="colors">
+                <!-- Primeiro SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 17 17" fill="none">
+                    <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1279)" onclick="alternarSelecao(this)" />
+                    <defs>
+                        <linearGradient id="paint0_linear_8_1279" x1="5" y1="1.5" x2="13" y2="14.5" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#15368A" />
+                            <stop offset="1" stop-color="#D1DEFF" />
+                        </linearGradient>
+                    </defs>
+                </svg>
 
-            <!-- Terceiro SVG -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 17 17" fill="none">
-              <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1284)" onclick="alternarSelecao(this)"/>
-              <defs>
-                <linearGradient id="paint0_linear_8_1284" x1="4" y1="3.5" x2="17" y2="17" gradientUnits="userSpaceOnUse">
-                  <stop stop-color="#EBEBEB"/>
-                  <stop offset="0.9999" stop-color="#D7D7D7"/>
-                  <stop offset="1" stop-color="#C4C4C4"/>
-                </linearGradient>
-              </defs>
-            </svg>
-          </div>
+                <!-- Segundo SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 17 17" fill="none">
+                    <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1282)" onclick="alternarSelecao(this)" />
+                    <defs>
+                        <linearGradient id="paint0_linear_8_1282" x1="4" y1="1" x2="13.5" y2="15" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#2E2E2E" />
+                            <stop offset="1" stop-color="#A9A9A9" />
+                        </linearGradient>
+                    </defs>
+                </svg>
 
-          <div class="size">
-            <p class="tamanho">Tamanho</p>
-            <div class="numeracoes-container">
-              <div class="numeracoes" id="numeracao" onclick="alternarSelecaoElemento(this)">34</div>
-              <div class="numeracoes" id="numeracao2" onclick="alternarSelecaoElemento(this)">35</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">36</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">37</div>
+                <!-- Terceiro SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 17 17" fill="none">
+                    <circle cx="7.5" cy="7.0" r="7.0" fill="url(#paint0_linear_8_1284)" onclick="alternarSelecao(this)" />
+                    <defs>
+                        <linearGradient id="paint0_linear_8_1284" x1="4" y1="3.5" x2="17" y2="17" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#EBEBEB" />
+                            <stop offset="0.9999" stop-color="#D7D7D7" />
+                            <stop offset="1" stop-color="#C4C4C4" />
+                        </linearGradient>
+                    </defs>
+                </svg>
             </div>
-            <div class="numeracoes-container">
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">38</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">39</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">40</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">41</div>
+
+            <div class="size">
+                <p class="tamanho">Tamanho</p>
+                <div class="numeracoes-container">
+                    <div class="numeracoes" id="numeracao" onclick="alternarSelecaoElemento(this)">34</div>
+                    <div class="numeracoes" id="numeracao2" onclick="alternarSelecaoElemento(this)">35</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">36</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">37</div>
+                </div>
+                <div class="numeracoes-container">
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">38</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">39</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">40</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">41</div>
+                </div>
+                <div class="numeracoes-container">
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">42</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">43</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">44</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">45</div>
+                </div>
+                <div class="numeracoes-container">
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">46</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">47</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">48</div>
+                    <div class="numeracoes" onclick="alternarSelecaoElemento(this)">49</div>
+                </div>
+                <p class="valores-produto"><strong>R$ @Model[0].cal_valor</strong> à vista</p>
+                @{
+                    decimal valorTotal = Model[0].cal_valor;
+                    int numeroParcelas = 10;
+                    decimal valorParcela = valorTotal / numeroParcelas;
+                }
+                <p class="parcela-produto">@String.Format("10x R$ {0:0.00}", valorParcela)</p>
+                <p class="parcela-produto">sem juros</p>
             </div>
-            <div class="numeracoes-container">        
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">42</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">43</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">44</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">45</div>
+
+            <div class="comprar-adicionar">
+                <a asp-controller="CarrinhoCompras" asp-action="CarrinhoCompras" asp-route-cal_id="@Model[0].cal_id">
+                    <button class="btn-azul" id="btn-comprar">Comprar</button>
+                </a>
+                <button class="btn-branco" onclick="addItemCart(this)" id="btn-add-carrinho">Adicionar ao carrinho</button>
             </div>
-            <div class="numeracoes-container">  
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">46</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">47</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">48</div>
-              <div class="numeracoes" onclick="alternarSelecaoElemento(this)">49</div>
-            </div>
-            <p class="valores-produto"><strong>R$ 499,90</strong> à vista</p>
-            <p class="parcela-produto">10x R$ 49,90</p>
-            <p class="parcela-produto">sem juros</p>
-          </div>
-          
-          <div class="comprar-adicionar">
-          <a href="carrinho_compras.html"><button  class="btn-azul" id="btn-comprar">Comprar</button>
-            </a>
-          <button  class="btn-branco" onclick="addItemCart(this)" id="btn-add-carrinho">Adicionar ao carrinho</button>          </div>
-      </div>
+        </div>
     </div>
 
     <link rel="stylesheet" href="~/css/style.css">
